further BTree code clean, should be good by now